# TinaXlsx

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  DEPLOYMENT_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  REFACTOR_REPORT.md  RELEASE_TEMPLATE.md  example_reader.cpp  simple_test.cpp  test_simple_reader_en.cpp  validate_memory_first_architecture.ps1
.github/workflows/: build.yml  ci.yml
api-docs/: API_INDEX.md  API_Reference.md  README.md
cmake/: CompilerConfig.cmake  Doxyfile.in  DoxygenConfig.cmake  TestUtils.cmake  TinaXlsx.pc.in  TinaXlsxConfig.cmake.in
doc/: 01_Project_Architecture.md  02_API_Design.md  03_Class_Relationships.md  04_Implementation_Plan.md  README.md  TinaXlsx库功能验证与代码质量检查报告.md  TinaXlsx架构设计与解析流程.md  测试失败问题分析与解决方案.md  项目修复进度报告.md
docs/: ADVANCED_PARALLEL_FRAMEWORK.md  ARCHITECTURE_SUMMARY.md  Architecture_and_Workflow.md  CLASS_REFERENCE.md  CMAKE_TEST_UTILS.md  Excel密码保护功能实现文档.md  HIGH_PERFORMANCE_XML.md  ISSUE_CHECKLIST.md  ImplementationPlan.md  KNOWN_ISSUES.md  PARALLEL_FRAMEWORK_IMPLEMENTATION.md  PARALLEL_QUICK_START.md  PERFORMANCE_OPTIMIZATION.md  PHASE4_DEVELOPMENT_PLAN.md  PROJECT_ARCHITECTURE.md  README.md  REFACTOR_PARALLEL_PERFORMANCE.md  TESTING_GUIDE.md  TXCompactCell替换计划.md  TXCompactCell进一步优化方案.md  TinaXlsx_Architecture_Analysis.md  TinaXlsx_功能规划与优化建议.md  TinaXlsx架构优化方案.md  UNIFIED_BATCH_ARCHITECTURE_PLAN.md  USAGE_GUIDE.md  UserLayerAPI.md
include/TinaXlsx/: Cell.hpp  DataCache.hpp  DiffTool.hpp  ExcelStructureManager.hpp  Exception.hpp  Format.hpp  Reader.hpp  TXAdvancedParallelFramework.hpp  TXAsyncProcessingFramework.hpp  TXAxisBuilder.hpp  TXBatchCellManager.hpp  TXBatchFormat.hpp  TXBatchPipeline.hpp  TXBatchPipelineStages.hpp  TXBatchSIMDProcessor.hpp  TXBatchWorksheetWriter.hpp  TXBatchXMLGenerator.hpp  TXCell.hpp  TXCellManager.hpp  TXChart.hpp  TXChartSeries.hpp  TXChartSeriesBuilder.hpp  TXChartStyle.hpp  TXChartXmlHandler.hpp  TXChunkAllocator.hpp  TXColor.hpp  TXColumn.hpp  TXCompactCell.hpp  TXComponentManager.hpp  TXConditionalFormat.hpp  TXContentTypesXmlHandler.hpp  TXCoordUtils.hpp  TXCoordinate.hpp  TXDataFilter.hpp  TXDataValidation.hpp  TXDocumentPropertiesXmlHandler.hpp  TXError.hpp  TXFastXmlWriter.hpp  TXFont.hpp  TXFormula.hpp  (+81 more)
include/TinaXlsx/io/: TXExcelIO.hpp  TXHighPerformanceXLSXReader.hpp
include/TinaXlsx/user/: TXCell.hpp  TXSheet.hpp  TXWorkbook.hpp
src/: Cell.cpp  DataCache.cpp  DiffTool.cpp  ExcelStructureManager.cpp  Format.cpp  Reader.cpp  TXAdvancedParallelFramework.cpp  TXAsyncProcessingFramework.cpp  TXAxisBuilder.cpp  TXBatchCellManager.cpp  TXBatchFormat.cpp  TXBatchPipeline.cpp  TXBatchPipelineStages.cpp  TXBatchSIMDProcessor.cpp  TXBatchWorksheetWriter.cpp  TXBatchXMLGenerator.cpp  TXCell.cpp  TXCellManager.cpp  TXChart.cpp  TXChartSeries.cpp  TXChartSeriesBuilder.cpp  TXChartStyle.cpp  TXChartXmlHandler.cpp  TXChunkAllocator.cpp  TXColor.cpp  TXColumn.cpp  TXCompactCell.cpp  TXComponentManager.cpp  TXConditionalFormat.cpp  TXCoordUtils.cpp  TXCoordinate.cpp  TXDataFilter.cpp  TXDataValidation.cpp  TXError.cpp  TXFastXmlWriter.cpp  TXFont.cpp  TXFormula.cpp  TXFormulaBuilder.cpp  TXFormulaManager.cpp  TXGlobalStringPool.cpp  (+62 more)
src/io/: TXExcelIO.cpp  TXHighPerformanceXLSXReader.cpp
src/user/: TXCell.cpp  TXSheet.cpp  TXWorkbook.cpp
tests/: CMakeLists.txt  README.md  main_test.cpp  test_cell.cpp  test_main.cpp  test_new_features.cpp  test_zip_handler.cpp
tests/debug/: CMakeLists.txt  test_basic_functionality.cpp  test_data_integrity.cpp  test_file_validation.cpp  test_multisheet.cpp  test_vector_debug.cpp
tests/examples/: component_usage_gtest.cpp  example_new_features.cpp  example_performance.cpp  example_sales_data.cpp  example_styled_report.cpp  test_basic_operations.cpp  test_formulas.cpp  test_merged_cells.cpp  test_performance.cpp  test_styles.cpp
tests/features/: test_cell_format_features.cpp  test_component_architecture.cpp
tests/functional/: test_memory_first_api.cpp
tests/integration/: CMakeLists.txt  debug_xml_test.cpp  debug_zip_test.cpp  test_excel_operations.cpp  test_main.cpp  test_reader_comprehensive.cpp  test_reader_functionality.cpp  test_workflow_integration.cpp
tests/performance/: CMakeLists.txt  performance_analyzer.hpp  run_performance_tests.bat  run_simple_performance.bat  test_advanced_parallel_performance.cpp  test_batch_operations.cpp  test_extreme_performance.cpp  test_memory_optimization.cpp  test_optimized_performance.cpp  test_performance.cpp  test_performance_extreme.cpp  test_performance_simple.cpp  test_pugi_stream_performance.cpp  test_shared_strings_performance.cpp
tests/unit/: CMakeLists.txt  README.md  test_base.hpp  test_basic.cpp  test_basic_features.cpp  test_batch_pipeline.cpp  test_cell.cpp  test_cell_formatting.cpp  test_cell_locking.cpp  test_cell_manager.cpp  test_cell_styles.cpp  test_chart_functionality.cpp  test_chart_phase2.cpp  test_chart_refactoring.cpp  test_column_width_debug.cpp  test_column_width_decimal.cpp  test_column_width_row_height.cpp  test_complete_xlsx_simple.cpp  test_coord_utils.cpp  test_data_features.cpp  test_data_filter.cpp  test_enhanced_formulas.cpp  test_file_generator.cpp  test_file_generator.hpp  test_handlers.cpp  test_high_performance_logger.cpp  test_memory_management.cpp  test_merged_cells.cpp  test_multilevel_allocator.cpp  test_new_architecture.cpp  test_number_utils.cpp  test_performance_benchmark.cpp  test_pivot_table.cpp  test_pivot_table_unified.cpp  test_protection_debug.cpp  test_reader_new.cpp  test_row_column_manager.cpp  test_shared_strings_debug.cpp  test_sheet_protection.cpp  test_sheet_protection_manager.cpp  (+21 more)
